syntax = "proto3";

package user;


message User {
  string id = 1;
  string username = 2;
  string password = 3;
  string role = 4;
  string email = 5;
  string firstname = 6;
  string lastname = 7;
}

message Credentials {
  string username = 1;
  string password = 2;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string firstname = 4;
  string lastname = 5;
}

message UserResponse {
  User data = 1;
}

message BoolResponse {
  bool data = 1;
}

message ValidateUserResponse {
  message UserData {
    User user = 1;
  }
  UserData data = 1;
}

service UserService {
  rpc CreateUser(User) returns (BoolResponse);
  rpc ValidateUser(Credentials) returns (ValidateUserResponse);
}